# FPWFSC

./: .gitignore  2  FF_GUI.py  FF_software.ini  FF_software.spec  LICENSE  amazing_darkhole.py  gui_helper.py  pyproject.toml  run.py  run_simulation.py  run_sn.py  sn_config.ini  test_coronagraphi_model.py
SUCCESSFUL_CLOSED_output_2025-04-30_09-51-07/: sn_config.ini
bgds/: badpix.fits  masterflat.fits  medbackground.fits  medflatdark.fits
common/: bench_hardware.py  classes.py  detector_calibration_script.py  detector_calibration_script_shortened.py  fake_hardware.py  hardware.py  load_hardware.py  make_keck_aperture.py  plotting_funcs.py  support_functions.py  vandamstrehl.py
fpwfsc/: CHANGES_2026-04-15.md  CLAUDE.md  __init__.py
output_2025-04-25_15-38-12/: sn_config.ini
output_2025-04-25_15-48-37/: sn_config.ini
output_2025-04-25_15-54-15/: sn_config.ini
output_2025-04-29_09-36-42/: sn_config.ini
output_2025-04-29_09-44-09/: sn_config.ini
output_2025-04-29_09-50-08/: sn_config.ini
output_2025-04-29_09-53-03/: sn_config.ini
output_2025-04-29_10-29-43/: sn_config.ini
output_2025-04-29_10-39-49/: sn_config.ini
output_2025-04-29_10-59-56/: amazing_darkhole.py
output_2025-04-29_11-28-47/: sn_config.ini  sn_config.spec
output_2025-04-29_11-46-39/: sn_config.ini
output_2025-04-29_12-12-43/: sn_config.ini
output_2025-04-29_12-17-08/: sn_config.ini
output_2025-04-29_12-25-24/: sn_config.ini
output_2025-04-29_13-34-23/: sn_config.ini
output_2025-04-29_13-40-21/: sn_config.ini
output_2025-04-29_13-43-01/: sn_config.ini
output_2025-04-29_14-08-16/: sn_config.ini
output_2025-04-29_14-22-53/: sn_config.ini
output_2025-04-29_14-29-19/: sn_config.ini
output_2025-04-29_14-51-27/: sn_config.ini
scripts/: file_inotify.sh  (+2 more)
(+860 files in other folders)
