[project]
name = "fpwfsc"
version = "0.1.0"
authors = [
    { name = "Michael Bottom", email = "mbottom@hawaii.edu" },
    { name = "Jaren Ashcraft", email = "jarenashcraft@ucsb.edu" },
    { name = "Mahawa Cisse", email = "mcisse@keck.hawaii.edu" },
]
description = "A Python package for focal plane wavefront sensing and control at W.M. Keck Observatory."
license = { file = "LICENSE.md" }

dependencies = [
    "numpy",
    "scipy",
    "hcipy",
    "scikit-image", # analysis
    "matplotlib",
    "tqdm",
    "PyQt5",
    "astropy",
    "pyqtgraph",
    "configobj",
]

[project.urls]
GitHub = "https://github.com/mb2448/fpwfsc"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fpwfsc"]

[tool.pytest.ini_options]
pythonpath = ["."]
